# ai-agents-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: ci.yml  release.yml
__tests__/: board-model.test.js  categories.test.js  config.test.js  formatters.test.js  list-org-model.test.js  markdown.test.js  pty-manager.test.js  pty-owners.test.js  reader.test.js  unmanaged.test.js
__tests__/fixtures/: active-sessions.json  notes.md
data/: config.js  pty-manager.js  pty-owners.js  reader.js
docs/: GUIDE.md  index.html
docs/adr/: ADR-001-vanilla-js-electron-35-macos-read-only-claude-proj.md  ADR-002-fix-critical-pty-zombie-leaks-via-simple-main-js-w.md  ADR-003-renderer-architecture-2-3-files-app-js-ui-js-deleg.md  ADR-004-data-layer-caching-mtime-tracked-files-not-fs-watc.md  ADR-005-ipc-surface-locked-8-fixed-channels-all-inputs-val.md  ADR-006-detail-panel-architecture-keep-separate-detail-htm.md  ADR-007-distribution-electron-builder-code-signing-notariz.md  ARCHITECTURE.md  README.md  (+8 more)
renderer/: app.js  board.js  detail-window.js  detail.html  index.html  looks.js  settings.js  style.css  terminal.js  ui.js  unmanaged.js  xterm-bundle.js
scripts/: ao-statusline.sh  check-bundle-current.sh  check-no-secrets.sh  install.sh  seed-demo.js  statusline-usage-piggyback.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  git.rs  lib.rs  pty.rs  reader.rs  skills.rs  statusline.rs  terminal.rs
(+48 files in other folders)
