[package]
name = "app"
version = "0.2.1"
description = "Mission control for your parallel Claude Code sessions — a native macOS dashboard."
authors = ["Timothée Mercier"]
license-file = "LICENSE"
repository = "https://github.com/t-mercier/ai-agents-orchestrator"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
dirs = "5"                     # cross-platform home dir
libc = "0.2"                   # kill(pid, 0) — "is this process still alive?"
portable-pty = "0.8"           # embedded terminal: spawn a pty per session
tauri-plugin-dialog = "2.7.1"
trash = "5"                    # move a deleted session folder to the OS Trash (recoverable)
